objects/SFDC2AccountResearchRecordType__mdt.object
<CustomObject>
    <description>Record type mappings for Account Research functionality</description>
    <fields>
        <fullName>CurrentRecordType__c</fullName>
        <label>Current Record Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto_Lending_Person_Accounts</fullName>
                    <default>true</default>
                    <label>Auto_Lending_Person_Accounts</label>
                </value>
                <value>
                    <fullName>Business_Account</fullName>
                </value>
                <value>
                    <fullName>Business_Account_SFDC2</fullName>
                </value>
                <value>
                    <fullName>Business_Banking</fullName>
                </value>
                <value>
                    <fullName>Business_Consumer_Person_Account</fullName>
                </value>
                <value>
                    <fullName>Capital_Markets</fullName>
                </value>
                <value>
                    <fullName>CI_Account</fullName>
                </value>
                <value>
                    <fullName>Consumer_Deposits_Person_Accounts</fullName>
                </value>
                <value>
                    <fullName>Consumer_Person_Account_SFDC2</fullName>
                </value>
                <value>
                    <fullName>Consumer_Wholesale</fullName>
                </value>
                <value>
                    <fullName>Dealer_Services</fullName>
                </value>
                <value>
                    <fullName>Dealer_Services_Person_Accounts_Record_Type</fullName>
                </value>
                <value>
                    <fullName>Equipment_Finance_Group</fullName>
                </value>
                <value>
                    <fullName>Factoring_Partner</fullName>
                </value>
                <value>
                    <fullName>Factoring_Prospect</fullName>
                </value>
                <value>
                    <fullName>Financial_Advisor</fullName>
                </value>
                <value>
                    <fullName>Income_Property_Lending</fullName>
                </value>
                <value>
                    <fullName>Insurance_Companies</fullName>
                </value>
                <value>
                    <fullName>IPL_Account</fullName>
                </value>
                <value>
                    <fullName>PersonAccount</fullName>
                </value>
                <value>
                    <fullName>Prospecting_Business_Consumer_PA_SFDC2</fullName>
                </value>
                <value>
                    <fullName>Prospecting_Business_SFDC2</fullName>
                </value>
                <value>
                    <fullName>Prospecting_Consumer_PA_SFDC2</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_Assignee</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_Courts</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_IGT_Winners</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_Law_Firms</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_Lottery</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_Originator</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_State_Lotteries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewRecordType__c</fullName>
        <label>New Record Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto_Lending_Person_Accounts</fullName>
                    <default>true</default>
                    <label>Auto_Lending_Person_Accounts</label>
                </value>
                <value>
                    <fullName>Business_Account</fullName>
                </value>
                <value>
                    <fullName>Business_Account_SFDC2</fullName>
                </value>
                <value>
                    <fullName>Business_Banking</fullName>
                </value>
                <value>
                    <fullName>Business_Consumer_Person_Account</fullName>
                </value>
                <value>
                    <fullName>Capital_Markets</fullName>
                </value>
                <value>
                    <fullName>CI_Account</fullName>
                </value>
                <value>
                    <fullName>Consumer_Deposits_Person_Accounts</fullName>
                </value>
                <value>
                    <fullName>Consumer_Person_Account_SFDC2</fullName>
                </value>
                <value>
                    <fullName>Consumer_Wholesale</fullName>
                </value>
                <value>
                    <fullName>Dealer_Services</fullName>
                </value>
                <value>
                    <fullName>Dealer_Services_Person_Accounts_Record_Type</fullName>
                </value>
                <value>
                    <fullName>Equipment_Finance_Group</fullName>
                </value>
                <value>
                    <fullName>Factoring_Partner</fullName>
                </value>
                <value>
                    <fullName>Factoring_Prospect</fullName>
                </value>
                <value>
                    <fullName>Financial_Advisor</fullName>
                </value>
                <value>
                    <fullName>Income_Property_Lending</fullName>
                </value>
                <value>
                    <fullName>Insurance_Companies</fullName>
                </value>
                <value>
                    <fullName>IPL_Account</fullName>
                </value>
                <value>
                    <fullName>PersonAccount</fullName>
                </value>
                <value>
                    <fullName>Prospecting_Business_Consumer_PA_SFDC2</fullName>
                </value>
                <value>
                    <fullName>Prospecting_Business_SFDC2</fullName>
                </value>
                <value>
                    <fullName>Prospecting_Consumer_PA_SFDC2</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_Assignee</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_Courts</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_IGT_Winners</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_Law_Firms</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_Lottery</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_Originator</fullName>
                </value>
                <value>
                    <fullName>Specialty_Finance_State_Lotteries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Specify the operation for Account Research</description>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request/Cancel</fullName>
                    <default>true</default>
                    <label>Request/Cancel</label>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                    <isActive>false</isActive>
                    <label>Cancel</label>
                </value>
                <value>
                    <fullName>Request</fullName>
                    <isActive>false</isActive>
                    <label>Request</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedObject__c</fullName>
        <label>Related Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Research Record Type Mappings</relationshipLabel>
        <relationshipName>ResearchRecordTypeMappings_del</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>SFDC2 Account Research Record Type</label>
    <pluralLabel>SFDC2 Account Research Record Types</pluralLabel>
</CustomObject>